--- a/css/machine.css
+++ b/css/machine.css
@@ -1915,7 +1915,7 @@ html,body{
 }
 /*警报部分*/
 .user_body_right_foot_item_alarm{
-	width: 640px;
+	width: 720px;
 	height: auto;
 	margin-top: 5px;
 	position: relative;
@@ -1936,6 +1936,15 @@ html,body{
 	padding-right: 3px;
 	border-radius: 4px;
 	border: 1px #e5e5e5 solid;
+}
+.user_body_right_foot_item_alarm>p>button{
+	padding: 5px 10px;
+	border-radius: 4px;
+	background-color: #ffffff;
+	border: 1px #d4d4d4 solid;
+}
+.user_body_right_foot_item_alarm>p>button:active{
+	background-color: #e5e5e5;
 }
 .user_body_right_foot_item_alarm_left,.user_body_right_foot_item_alarm_right{
 	width: 300px;
