--- a/css/inventory_report.css
+++ b/css/inventory_report.css
@@ -198,7 +198,6 @@
 }
 
 .sales_body{
-  display: none;
   width: auto;
   min-width: 1200px;
   height: auto;
@@ -259,8 +258,8 @@
   border: 1px #a4a4a4 solid;
 }
 .sales_body_table_tbody_btn{
-  width: 46px;
-  height: 24px;
+  width: auto;
+  padding: 5px 10px;
   border: 1px #d4d4d4 solid;
   background-color: #ffffff;
   font-size: 12px;
@@ -269,27 +268,20 @@
 .sales_body_table_tbody_btn:hover{
   background-color: #f0f0f0;
 }
-.refund_fixed{
-  display: none;
-  width: 100%;
-  height: 100%;
-  position: fixed;
-  top: 0px;
-  left: 0px;
-  background-color: rgba(0,0,0,0.5);
-  z-index: 9999;
-}
-.refund_fixed_body{
-  width: 400px;
-  height: 320px;
+.sales_fixed{
+  display: none; 
+  width: 800px;
+  height: 500px;
   background-color: #ffffff;
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
-  margin-top: -160px;
-  margin-left: -200px;
+  margin-top: -250px;
+  margin-left: -400px;
+  box-shadow: 0px 0px 2px #e5e5e5;
+  z-index: 9999;
 }
-.refund_fixed_body>p{
+.sales_fixed>p{
   width: 100%;
   height: 30px;
   line-height: 30px;
@@ -298,9 +290,8 @@
   position: relative;
   box-sizing: border-box;
   border-bottom: 1px #e5e5e5 solid;
-  margin-bottom: 10px;
 }
-.refund_fixed_body>p>span{
+.sales_fixed>p>span{
   display: block;
   width: 30px;
   height: 30px;
@@ -309,37 +300,30 @@
   cursor: pointer;
   transition: 1s;
   transform-origin: center;
+  user-select: none;
 }
-.refund_fixed_body>p>span:hover{
+.sales_fixed>p>span:hover{
   transform: rotate(360deg);
 }
-.refund_fixed_body>table{
+.sales_fixed_body{
+  width: 100%;
+  height: calc(100% - 30px);
+  overflow-y: auto;
+  overflow-x: hidden;
+}
+.sales_fixed_body>table{
   width: 100%;
   height: auto;
   font-size: 14px;
   border-collapse: collapse;
+  text-align: center;
 }
-.refund_fixed_body>table>tbody>tr>td{
+.sales_fixed_body>table>thead>tr>th{
   height: 26px;
 }
-.refund_fixed_body>table>tbody>tr>td:nth-child(1){
-  text-align: right;
+.sales_fixed_body>table>tbody>tr:nth-child(odd){
+  background-color: #e5e5e5;
 }
-.refund_fixed_body_submit{
-  display: block;
-  width: 80px;
+.sales_fixed_body>table>tbody>tr>td{
   height: 30px;
-  line-height: 30px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 10px;
-  border: none;
-  border-radius: 3px;
-  background-color: #0C64A8;
-  color: #ffffff;
-  font-size: 14px;
-  letter-spacing: 2px;
-}
-.refund_fixed_body_submit:hover{
-  background-color: #0E72BE;
 }
