售货机页面远程控制设置温度功能停止使用，在线出货功能新增websocket查询设备是否繁忙！

--- a/css/machine.css
+++ b/css/machine.css
@@ -1520,7 +1520,7 @@ html,body{
 .user_body_right_foot_item_remote_title_add{
 	height: 24px;
 	border-radius: 3px;
-	background-color: #ffffff;
+	background-color: #e5e5e5;
 	padding: 3px 5px;
 	border: 1px #d4d4d4 solid;
 	position: relative;
@@ -1533,7 +1533,7 @@ html,body{
 .user_body_right_foot_item_remote_title_submit{
 	height: 24px;
 	border-radius: 3px;
-	background-color: #ffffff;
+	background-color: #e5e5e5;
 	padding: 3px 5px;
 	border: 1px #d4d4d4 solid;
 	position: relative;
