--- a/css/inventory_report.css
+++ b/css/inventory_report.css
@@ -268,6 +268,19 @@
 .sales_body_table_tbody_btn:hover{
   background-color: #f0f0f0;
 }
+.sales_body_table_tbody_btns{
+  width: auto;
+  padding: 5px 10px;
+  border: 1px #d4d4d4 solid;
+  background-color: #0C64A8;
+  color: #ffffff;
+  font-size: 12px;
+  border-radius: 3px;
+  margin-left: 20px;
+}
+.sales_body_table_tbody_btns:hover{
+  background-color: #1083DA;
+}
 .sales_fixed{
   display: none; 
   width: 800px;
